test/mpi/errors/cxx/errhan/Makefile.sm
INCLUDES = -I../../../include -I${srcdir}/../../../include
DEPADD = @MPILIBLOC@ 
smvar_do_sharedlibs = 0

errgetx_SOURCES   = errgetx.cxx
errgetx_LDADD     = ../../../cxx/util/mtest.o
errsetx_SOURCES   = errsetx.cxx
errsetx_LDADD     = ../../../cxx/util/mtest.o
throwtest_SOURCES = throwtest.cxx
throwtest_LDADD   = ../../../cxx/util/mtest.o

